More work on the proto

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,8 +1,8 @@
-snoozethis.pb.go: snoozethis.proto Makefile
+logwait.pb.go: logwait.proto Makefile
 	protoc \
 		--go_opt=paths=source_relative                                  \
 		--go_out=.                                                      \
 		--go-grpc_out=.                                                 \
 		--go-grpc_opt=paths=source_relative                             \
 		--go-grpc_opt=require_unimplemented_servers=false               \
-		snoozethis.proto
+		logwait.proto
