--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,30 +1,8 @@
-all: common.pb.go observer.pb.go scanner.pb.go
-
-.PHONY: all
-
-common.pb.go: common.proto Makefile
+common.pb.go: common.proto observer.proto scanner.proto Makefile
 	protoc \
 		--go_opt=paths=source_relative                                  \
 		--go_out=.                                                      \
 		--go-grpc_out=.                                                 \
 		--go-grpc_opt=paths=source_relative                             \
 		--go-grpc_opt=require_unimplemented_servers=false               \
-		common.proto
-
-observer.pb.go: observer.proto Makefile
-	protoc \
-		--go_opt=paths=source_relative                                  \
-		--go_out=.                                                      \
-		--go-grpc_out=.                                                 \
-		--go-grpc_opt=paths=source_relative                             \
-		--go-grpc_opt=require_unimplemented_servers=false               \
-		observer.proto
-
-scanner.pb.go: scanner.proto Makefile
-	protoc \
-		--go_opt=paths=source_relative                                  \
-		--go_out=.                                                      \
-		--go-grpc_out=.                                                 \
-		--go-grpc_opt=paths=source_relative                             \
-		--go-grpc_opt=require_unimplemented_servers=false               \
-		scanner.proto
+		common.proto observer.proto scanner.proto
