--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,8 +1,8 @@
-common.pb.go: common.proto observer.proto scanner.proto Makefile
+logwait_common.pb.go: logwait_common.proto observer.proto scanner.proto Makefile
 	protoc \
 		--go_opt=paths=source_relative                                  \
 		--go_out=.                                                      \
 		--go-grpc_out=.                                                 \
 		--go-grpc_opt=paths=source_relative                             \
 		--go-grpc_opt=require_unimplemented_servers=false               \
-		common.proto observer.proto scanner.proto
+		logwait_common.proto observer.proto scanner.proto
